Bon! Bon....la flemme! Encore 4 exos à réaliser

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,6 +17,7 @@
 </nav>
 </header>
 <body>
-<p>Les Gossip du futur arrivent !!!</p>
+	<h1>BIENVENUE !!!</h1>
+	<p>Voici la liste de tous les gossips que nous avons en base à ce jour</p>
 </body>
 </html>
