--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -21,7 +21,7 @@
 	<p>Notre super Team composer de moussaillons venus tout droit du futur <br>
 		<ul>
 			<li>Le 1er Yvon E </li>
-			<li>Le 2nd Franck K </li>		
+			<li>Le 2nd Eponime P </li>
 		</ul>
 	</p>
 
