--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
 <header>
-	<!-- Ajout d'une NavBar bootstrap-->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href=<%=static_pages_home_path%>>The Gossip Project</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link " href=<%=static_pages_home_path%>>Home </a>
-      <a class="nav-item nav-link" href=<%=static_pages_team_path%>>Team</a>
-      <a class="nav-item nav-link active" href=<%=static_pages_contact_path%>>Contact US <span class="sr-only">(current)</span></a>
-    </div>
-  </div>
-</nav>
+    	<!-- Ajout d'une NavBar bootstrap-->
+    	<nav class="navbar navbar-expand-lg navbar-light bg-light" >
+          <a class="navbar-brand" href=<%=home_path%>>The Gossip Project</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link " href=<%=home_path%>>Home </a>
+              <a class="nav-item nav-link" href=<%=team_path%>>Team</a>
+              <a class="nav-item nav-link active" href=<%=contact_path%>>Contact Us <span class="sr-only">(current)</span></a>
+            </div>
+          </div>
+    </nav>
 </header>
 <body>
 
-<br>
-<h3>N'hesitez plus! Contactez-nous</h3><br><br>
-<p>La team vous répond jour et nuit (bon c'est une blague pour la nuit! Le commerage attendra le lendemain) 😇❤️😻</p>
+      <br>
+      <h3>N'hesitez plus! Contactez-nous</h3><br><br>
+      <p>La team vous répond jour et nuit (bon c'est une blague pour la nuit! Le commerage attendra le lendemain) 😇❤️😻</p>
 
 </body>
 </html>
