--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -3,22 +3,22 @@
 <header>
 	<!-- Ajout d'une NavBar bootstrap-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href=<%=static_pages_home_path%>>The Gossip Project</a>
+  <a class="navbar-brand" href=<%=home_path%>>The Gossip Project</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link " href=<%=static_pages_home_path%>>Home </a>
-      <a class="nav-item nav-link" href=<%=static_pages_team_path%>>Team <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link active" href=<%=static_pages_contact_path%>>Contact US </a>
+      <a class="nav-item nav-link " href=<%=home_path%>>Home </a>
+      <a class="nav-item nav-link" href=<%=team_path%>>Team <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href=<%=contact_path%>>Contact Us </a>
     </div>
   </div>
 </nav>
 </header>
 <body>
 	<h3>Présentation de l'équipe 😇❤️😻</h3><br>
-	<p>Notre super Team composer de moussaillons venus tout droit du futur <br>
+	<p>Notre super Team composée de moussaillons venus tout droit du futur <br>
 		<ul>
 			<li>Le 1er Yvon E </li>
 			<li>Le 2nd Eponime P </li>
