--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,27 +1,12 @@
 <!DOCTYPE html>
 <html>
-<header>
-    	<!-- Ajout d'une NavBar bootstrap-->
-    	<nav class="navbar navbar-expand-lg navbar-light bg-light" >
-          <a class="navbar-brand" href=<%=home_path%>>The Gossip Project</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-item nav-link " href=<%=home_path%>>Home </a>
-              <a class="nav-item nav-link" href=<%=team_path%>>Team</a>
-              <a class="nav-item nav-link active" href=<%=contact_path%>>Contact Us <span class="sr-only">(current)</span></a>
-            </div>
-          </div>
-    </nav>
-</header>
-<body>
-
-      <br>
-      <h3>N'hesitez plus! Contactez-nous</h3><br><br>
-      <p>La team vous répond jour et nuit (bon c'est une blague pour la nuit! Le commerage attendra le lendemain) 😇❤️😻</p>
-
-</body>
+<br/>
+<br/>
+<div class="jumbotron jumbotron-fluid" style="background-color:#cae3ed">
+  <div class="container">
+    <h1 class="display-5 text-center" style="color:#37444a" >N'hesitez plus! Contactez-nous</h1>
+    <p class="text-center">La team vous répond jour et nuit (bon c'est une blague pour la nuit! Le commerage attendra le lendemain) 😇❤️😻</p>
+  </div>
+</div>
 </html>
 
