--- a/app/views/gossip/display_gossip.html.erb
+++ b/app/views/gossip/display_gossip.html.erb
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
 <html>
-<header>
-  <!-- Ajout d'une NavBar bootstrap-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" >
-  <a class="navbar-brand" href=<%=home_path%>>The Gossip Project</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link " href=<%=home_path%>>Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href=<%=team_path%>>Team </a>
-      <a class="nav-item nav-link active" href=<%=contact_path%>>Contact Us </a>
-    </div>
-  </div>
-</nav>
-</header>
-<body>
 
-<h1>PAGE POTIN</h1>
-
-    <p> Voici la page du potin n°<%= params['id']%></p><br>
-    <p> Son auteur :<%= @gossip.user.first_name%></p>
-    <p> Le contenu du potin :<%= @gossip.content%></p><br>
+<br/>
+<br/>
+<div class="jumbotron jumbotron-fluid" style="background-color:#cae3ed">
+  <div class="container">
+    <h1 class="display-5 text-center" style="color:#37444a" >PAGE POTIN</h1>
+    <p class="text-center"> Voici la page du potin n°<%= params['id']%><br><br>
+    Son auteur :<%= @gossip.user.first_name%><br><br>
+    Le contenu du potin :<%= @gossip.content%><br><br>
     <a href=<%= home_path %>><button class='btn btn-primary'>Retour</button></a>
+    </p>
+  </div>
+</div>
+
+
+    
 </body>
 </html>
