--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,13 +10,16 @@
   </div>
 </div>
 
-
 <% @gossips.each.with_index(1) do |gossip, index| %>
-        <p>	
-          <%= index %> -
-          <%= gossip.user.first_name %><br/>
-           "<%=link_to "#{gossip.title}", gossip_path(gossip.id)%>"<br/>
-        
-        </p>
-      <% end %>
+  <div class="card-deck" style="margin-left: 15px; margin-right: 15px">
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title"><%= index %> - "<%= gossip.title %>"</h5>
+      <h6 class="card-subtitle mb-2 text-muted"><%= gossip.user.first_name %></h6>
+      <a href=<%= gossip_path(gossip.id) %>><button class='btn btn-primary'>Plus de détails:</button></a>
+    </div>
+    </div>
+  </div>
+<br/>
+<% end %>
 </html>
