MAJ des pages des views index et show

--- a/app/views/gossip/show.html.erb
+++ b/app/views/gossip/show.html.erb
@@ -9,7 +9,7 @@
     <p class="text-center"> Voici la page du potin n°<%= params['id']%><br><br>
     Son auteur :<%= @gossip.user.first_name%><br><br>
     Le contenu du potin :<%= @gossip.content%><br><br>
-    <a href=<%= home_path %>><button class='btn btn-primary'>Retour</button></a>
+    <a href=<%= gossip_index_path %>><button class='btn btn-primary'>Retour</button></a>
     </p>
   </div>
 </div>
@@ -18,3 +18,4 @@
     
 </body>
 </html>
+
