--- a/app/views/gossip/index.html.erb
+++ b/app/views/gossip/index.html.erb
@@ -5,9 +5,26 @@
 <br/>
 <div class="jumbotron jumbotron-fluid" style="background-color:#cae3ed">
   <div class="container">
+
+  	<!-- Ajout de la fonctionnalité qui permet d'ajouter une alerte au user-->
+	<% if flash[:alert] != nil %>
+	  <div class='alert alert-success mt-4'>
+	    <%= flash[:alert] %>
+	  </div>
+	  <% end %>
+
     <h1 class="display-5 text-center" style="color:#37444a" >BIENVENUE à toi!!!!</h1>
-    <p class="text-center">Voici la liste de tous les gossips que nous avons en base à ce jour</p>
+    <p class="text-center">Tu trouveras ci-dessous la liste de tous les gossips que nous avons en base à ce jour<br><br>
+    
+   Tu as également la possiblité de créer un nouveau gossip<br>
+   <!-- Permet d'ajouter la nouvelle fonctionnalité liée à la création de nouveau gossip-->
+    <a href=<%= new_gossip_path %>>
+      <button class='btn btn-primary '>Nouveau gossip</button>
+    </a>
+    </p>
   </div>
+  </div>
+
 </div>
 
 <% @gossips.each.with_index(1) do |gossip, index| %>
@@ -23,3 +40,5 @@
 <br/>
 <% end %>
 </html>
+
+
