--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,13 @@
   <header>
   <!-- Ajout d'une NavBar bootstrap-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color:#7146B2">
-  <a class="navbar-brand" href=<%=home_path%>>The Gossip Project</a>
+  <a class="navbar-brand" href=<%=gossip_index_path%>>The Gossip Project</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link " href=<%=home_path%>>Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link " href=<%=gossip_index_path%>>Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href=<%=team_path%>>Team </a>
       <a class="nav-item nav-link active" href=<%=contact_path%>>Contact Us </a>
     </div>
