--- a/app/views/gossip/new.html.erb
+++ b/app/views/gossip/new.html.erb
@@ -1,5 +1,8 @@
 <!-- Permet de créer un nouveau gossip à l'aide de la fourniture d'un formulaire -->
 
+<br>
+<a href=<%= gossip_index_path %>><button class='btn btn-primary'>Retour</button></a>
+
 <div class='container mt-4'>
 <div class='row justify-content-center'>
       <div class='col-6'>
@@ -15,6 +18,7 @@
             <% end %>
       
             <%= form_tag url_for(action: 'create'), method: "post" do %>
+
                   <div class='form-group'>
                         <%= label_tag 'Titre' %>
                         <%= text_field_tag 'title', nil, class: 'form-control' %>
