--- a/app/views/gossip/show.html.erb
+++ b/app/views/gossip/show.html.erb
@@ -7,10 +7,12 @@
   <div class="container">
     <h1 class="display-5 text-center" style="color:#37444a" >PAGE POTIN</h1>
     <p class="text-center"> Voici la page du potin n°<%= params['id']%><br><br>
-    Son auteur :<%= @gossip.user.first_name%><br><br>
-    Le contenu du potin :<%= @gossip.content%><br><br>
+    Intitulé :<%= @gossip.title%><br><br>
+    Auteur :<%= @gossip.user.first_name%><br><br>
+    Ville de l'auteur:<%= @gossip.user.city.name%><br><br>
+    Le contenu du potin est :<%= @gossip.content%><br><br>
     <a href=<%= gossip_index_path %>><button class='btn btn-primary'>Retour</button></a>
-    <a href=<%= show_user_path(@gossip.user.id) %>><button class='btn btn-primary'>info sur l'auteur</button></a>
+    <a href=<%= show_user_path(@gossip.user.id) %>><button class='btn btn-success'>info sur l'auteur</button></a>
     </p>
   </div>
 </div>
