--- a/app/views/gossip/index.html.erb
+++ b/app/views/gossip/index.html.erb
@@ -29,7 +29,7 @@
 
 <% @gossips.each.with_index(1) do |gossip, index| %>
   <div class="card-deck" style="margin-left: 15px; margin-right: 15px">
-  <div class="card" style="width: 18rem;">
+  <div class="card" style="width: 18rem; background-color:#cae3ed">
     <div class="card-body">
       <h5 class="card-title"><%= index %> - "<%= gossip.title %>"</h5>
       <h6 class="card-subtitle mb-2 text-muted"><%= gossip.user.first_name %></h6>
