--- a/app/views/gossip/show.html.erb
+++ b/app/views/gossip/show.html.erb
@@ -12,6 +12,7 @@
     Ville de l'auteur:<%= @gossip.user.city.name%><br><br>
     Le contenu du potin est :<%= @gossip.content%><br><br>
     <a href=<%= gossip_index_path %>><button class='btn btn-primary'>Retour</button></a>
+    <a href=<%= edit_gossip_path(@gossip.id) %>><button class='btn btn-secondary'>modifier</button></a>
     <a href=<%= show_user_path(@gossip.user.id) %>><button class='btn btn-success'>info sur l'auteur</button></a>
     </p>
   </div>
