--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,9 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link " href=<%=gossip_index_path%>>Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href=<%=team_path%>>Team </a>
-      <a class="nav-item nav-link active" href=<%=contact_path%>>Contact Us </a>
+      <a class="nav-item nav-link " href=<%=contact_path%>>Contact Us </a>
+      <a class="nav-item nav-link active" href=<%=new_user_path%>>Sign Up </a>
+      <a class="nav-item nav-link active" href=<%=sessions_new_path%>>Login </a>
     </div>
   </div>
 </nav>
