--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <a class="nav-item nav-link" href=<%=team_path%>>Team </a>
       <a class="nav-item nav-link " href=<%=contact_path%>>Contact Us </a>
       <a class="nav-item nav-link active" href=<%=new_user_path%>>Sign Up </a>
-      <a class="nav-item nav-link active" href=<%=sessions_new_path%>>Login </a>
+      <a class="nav-item nav-link active" href=<%=new_session_path%>>Login </a>
     </div>
   </div>
 </nav>
