--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -16,7 +16,7 @@
                   </ul>
             </div>
             <% end %>
-      <h3> Veuillez compléter le formulaire ci-dessous afin de débuter votre aventure 😇❤️😻!</h3>
+      <h3 class="text-center"> Veuillez compléter le formulaire ci-dessous afin de débuter votre aventure 😇❤️😻!</h3>
 
             <%= form_tag url_for(action: 'create'), method: "post" do %>
 
@@ -41,7 +41,7 @@
 
                   <div class='form-group'>
                         <%= label_tag 'Ton email' %>
-                        <%= text_area_tag 'email', nil, class: 'form-control'%>
+                        <%= password_field_tag 'email', nil, class: 'form-control'%>
                   </div>
 
                    <div class='form-group'>
