--- a/app/views/gossip/new.html.erb
+++ b/app/views/gossip/new.html.erb
@@ -1,7 +1,7 @@
 <!-- Permet de créer un nouveau gossip à l'aide de la fourniture d'un formulaire -->
 
 <br>
-<a href=<%= gossip_index_path %>><button class='btn btn-primary'>Retour</button></a>
+<a href=<%= gossip_index_path %>><button class='btn btn-outline-secondary ml-2'>Retour</button></a>
 
 <div class='container mt-4'>
 <div class='row justify-content-center'>
