--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -7,8 +7,9 @@
     <h1 class="display-5 text-center" style="color:#37444a" >Présentation de l'équipe 😇❤️😻</h1>
     <p class="text-center">Notre super Team composée de moussaillons venus tout droit du futur <br>
         <ul class="text-center">
-          Le 1er Yvon E <br>
-          Le 2nd Eponime P 
+          Le 1er King Yvon E <br>
+          Le 2nd Dr Franck K<br>
+          Et enfin la maitresse des octogones Eponime P
         </ul>
   </p>
 
