--- a/app/views/gossip/index.html.erb
+++ b/app/views/gossip/index.html.erb
@@ -32,7 +32,7 @@
   <div class="card" style="width: 18rem; background-color:#cae3ed">
     <div class="card-body">
       <h5 class="card-title"><%= index %> - "<%= gossip.title %>"</h5>
-      <h6 class="card-subtitle mb-2 text-muted"><%= gossip.user.first_name %></h6>
+      <h6 class="card-subtitle mb-2 text-muted">De <%= gossip.user.first_name %> <%= gossip.user.last_name %></h6>
       <a href=<%= gossip_path(gossip.id) %>><button class='btn btn-primary'>Plus de détails:</button></a>
     </div>
     </div>
