--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -1,7 +1,7 @@
 <!-- Permet de créer un nouveau compte utilisateur à l'aide de la fourniture d'un formulaire -->
 
 <br>
-<a href=<%= gossip_index_path %>><button class='btn btn-primary'>Retour</button></a>
+<a href=<%= gossip_index_path %>><button class='btn btn-outline-secondary ml-2'>Retour</button></a>
 
 <div class='container mt-4'>
 <div class='row justify-content-center'>
@@ -26,12 +26,12 @@
                   </div>
                   <div class='form-group'>
                         <%= label_tag 'Ton nom de Famille' %>
-                        <%= text_area_tag 'last_name', nil, class: 'form-control'%>
+                        <%= text_field_tag 'last_name', nil, class: 'form-control'%>
                   </div>
 
                   <div class='form-group'>
-                        <%= label_tag 'Age' %>
-                        <%= text_area_tag 'age', nil, class: 'form-control'%>
+                        <%= label_tag 'Date de naissance' %>
+                        <%= date_field_tag 'birthdate', nil, class: 'form-control' %>
                   </div>
 
                   <div class='form-group'>
@@ -41,18 +41,19 @@
 
                   <div class='form-group'>
                         <%= label_tag 'Ton email' %>
-                        <%= password_field_tag 'email', nil, class: 'form-control'%>
+                        <%= text_field_tag 'email', nil, class: 'form-control'%>
                   </div>
 
                    <div class='form-group'>
                         <%= label_tag 'Ton mot de passe' %>
-                        <%= text_area_tag 'password', nil, class: 'form-control'%>
+                        <%= password_field_tag 'password', nil, class: 'form-control'%>
                   </div>
 
-                   <div class='form-group'>
-                        <%= label_tag 'Ta ville de résidence' %>
-                        <%= text_area_tag 'city', nil, class: 'form-control'%>
+                  <div class='form-group'>
+                        <%= label_tag 'Ville' %>
+                        <%= select_tag 'city', options_from_collection_for_select(@cities, 'id', 'name'), class: 'form-control' %>
                   </div>
+  
 
                   <%= submit_tag "Publier", class: 'btn btn-primary'%>
             <% end %>
